fix add new, clear, autocomplete

--- a/source/src/locales/en.json
+++ b/source/src/locales/en.json
@@ -1,9 +1,8 @@
 {
-  "components.common.elements.ActionBar.bulkDeleteNoText": "No",
-  "components.common.elements.ActionBar.bulkDeleteOkText": "Yes",
   "components.common.elements.ActionBar.bulkDeleteTitle": "Are you sure you want to delete selected {objectName}?",
   "components.common.elements.ActionBar.create": "Add new",
-  "components.common.elements.ActionBar.deleteSelected": "Delete selected ({num})",
+  "components.common.elements.ActionBar.no": "No",
+  "components.common.elements.ActionBar.yes": "Yes",
   "components.common.form.CropImageField.index.upload": "{loading, select, true {uploading} other {upload}}",
   "components.common.form.SearchForm.clear": "Clear",
   "components.common.form.SearchForm.search": "Search",
@@ -13,6 +12,10 @@
   "components.common.page.category.CategorySavePageCommon.objectName": "category",
   "components.common.page.category.index.name": "Name",
   "components.common.page.category.index.objectName": "category",
+  "components.common.page.categoryDemo.index.createdBy": "Created By",
+  "components.common.page.categoryDemo.index.createdDate": "Created Date",
+  "components.common.page.categoryDemo.index.name": "Name",
+  "components.common.page.categoryDemo.index.objectName": "Category Demo",
   "constants.intl.commonButton.login": "Login",
   "constants.intl.commonLabel.articles": "Articles",
   "constants.intl.commonLabel.games": "Games",
@@ -28,6 +31,7 @@
   "constants.menuConfig.2089569204": "News category",
   "constants.menuConfig.2184542910": "Admins",
   "constants.menuConfig.2322824391": "News management",
+  "constants.menuConfig.2588937": "News category demo",
   "constants.menuConfig.3834517896": "News",
   "constants.menuConfig.4081709562": "System management",
   "hooks.useListBase.action": "Action",
@@ -65,7 +69,7 @@
   "modules.login.index.login": "Login",
   "modules.login.index.password": "Password",
   "modules.login.index.username": "Username",
-  "modules.main.AppHeader.locale": "{locale, select, en {Tiếng Việt} other {English}}",
+  "modules.main.AppHeader.locale": "{locale, select, en {Vietnamese} other {English}}",
   "modules.main.AppHeader.logout": "Logout",
   "modules.main.AppHeader.profile": "Profile",
   "modules.main.MainLayout.copyRight": " <strong>{brandName} </strong>- © Copyright {year}. All Rights Reserved.",
@@ -84,6 +88,8 @@
   "modules.news.category.CategorySavePage.newsCategory": "News Category",
   "modules.news.category.index.home": "Home",
   "modules.news.category.index.newsCategory": "News Category",
+  "modules.news.categoryDemo.index.home": "Home",
+  "modules.news.categoryDemo.index.newsCategoryDemo": "News Category Demo",
   "modules.news.index.1001853751": "Pin top",
   "modules.news.index.1124600214": "Title",
   "modules.news.index.1755013298": "Category",
